# skatemap

./: .gitignore  Dockerfile  README.md  TODO.md  api_schemas.py  config.py  db.py  db_models.py  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  run.py  services.py
api/: auth.py  images.py  schemas.py  spots.py
api/schemas/: users.py
core/: security.py
database/: db.py  db_models.py  images_db.py  models.py  spot_db.py  users_db.py  utils.py
docs/: architecture.md
docs/class_diagrams/: editing_diagrams.md  spot-image.puml
tests/: conftest.py  test_security.py  test_spots.py
tests/test_api/: test_images.py  test_spots.py
tests/test_db/: test_images_db.py  test_spots_db.py  test_users_db.py
