[tool.poetry]
package-mode = false

[project]
name = "skatemap"
version = "0.1.0"
description = "FastAPI backend for Skatemap"
authors = [
    {name = "cj-tomlin"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "uvicorn>=0.41.0",
    "pydantic>=2.0",
    "pytz>=2024.1",
    "python-multipart>=0.0.26",
    "httpx>=0.28",
    "starlette>=0.40",
]

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0"
httpx = ">=0.28"
poethepoet = "^0.44.0"


[tool.poe.tasks]
dev = "fastapi dev main.py"
test = "pytest tests/"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
